--- a/NetORMLib.Sql/NetORMLib.Sql.csproj
+++ b/NetORMLib.Sql/NetORMLib.Sql.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C94B7BF1-BF85-4483-B032-1582F9EC6423}</ProjectGuid>
+    <ProjectGuid>{D0D3E5A2-440C-4B0A-9B01-4633F2A74BDF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NetORMLib</RootNamespace>
-    <AssemblyName>NetORMLib</AssemblyName>
+    <RootNamespace>NetORMLib.Sql</RootNamespace>
+    <AssemblyName>NetORMLib.Sql</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,21 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Columns\Column.cs" />
-    <Compile Include="Columns\IColumn.cs" />
-    <Compile Include="CommandBuilders\CommandBuilder.cs" />
-    <Compile Include="CommandBuilders\ICommandBuilder.cs" />
-    <Compile Include="Filters\AndFilter.cs" />
-    <Compile Include="Filters\EqualsFilter.cs" />
-    <Compile Include="Filters\IEqualsFilter.cs" />
-    <Compile Include="Filters\IFilter.cs" />
+    <Compile Include="SqlCommandBuilder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\IFilterableQuery.cs" />
-    <Compile Include="Queries\IOrderableQuery.cs" />
-    <Compile Include="Queries\IQuery.cs" />
-    <Compile Include="Queries\ISelect.cs" />
-    <Compile Include="Queries\Select.cs" />
-    <Compile Include="Table.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NetORMLib\NetORMLib.csproj">
+      <Project>{c94b7bf1-bf85-4483-b032-1582f9ec6423}</Project>
+      <Name>NetORMLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
