--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -51,13 +51,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Personn.cs" />
+    <Compile Include="Models\PersonnExplicit.cs" />
     <Compile Include="SelectUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlCommandBuilderUnitTest.cs" />
+    <Compile Include="TableUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\NetORMLib.Sql\NetORMLib.Sql.csproj">
+      <Project>{d0d3e5a2-440c-4b0a-9b01-4633f2a74bdf}</Project>
+      <Name>NetORMLib.Sql</Name>
+    </ProjectReference>
     <ProjectReference Include="..\NetORMLib\NetORMLib.csproj">
       <Project>{C94B7BF1-BF85-4483-B032-1582F9EC6423}</Project>
       <Name>NetORMLib</Name>
