Added some filters and unit tests

--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -47,9 +47,19 @@
     <Compile Include="CommandBuilders\ICommandBuilder.cs" />
     <Compile Include="Filters\AndFilter.cs" />
     <Compile Include="Filters\ColumnFilter.cs" />
-    <Compile Include="Filters\EqualsFilter.cs" />
+    <Compile Include="Filters\IIsGreaterOrEqualToFilter.cs" />
+    <Compile Include="Filters\IIsLowerOrEqualToFilter.cs" />
+    <Compile Include="Filters\IIsNotEqualToFilter.cs" />
+    <Compile Include="Filters\IIsLowerThanFilter.cs" />
+    <Compile Include="Filters\IsGreaterOrEqualToFilter.cs" />
+    <Compile Include="Filters\IsLowerOrEqualToFilter.cs" />
+    <Compile Include="Filters\IsNotEqualToFilter.cs" />
+    <Compile Include="Filters\IsLowerThanFilter.cs" />
+    <Compile Include="Filters\IsGreaterThanFilter.cs" />
+    <Compile Include="Filters\IsEqualToFilter.cs" />
     <Compile Include="Filters\IColumnFilter.cs" />
-    <Compile Include="Filters\IEqualsFilter.cs" />
+    <Compile Include="Filters\IIsGreaterThanFilter.cs" />
+    <Compile Include="Filters\IIsEqualToFilter.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\IFilterableQuery.cs" />
