--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -45,7 +45,10 @@
     <Compile Include="Columns\IColumn.cs" />
     <Compile Include="CommandBuilders\CommandBuilder.cs" />
     <Compile Include="CommandBuilders\ICommandBuilder.cs" />
+    <Compile Include="Filters\BooleanFilter.cs" />
     <Compile Include="Filters\AndFilter.cs" />
+    <Compile Include="Filters\IAndFilter.cs" />
+    <Compile Include="Filters\IBooleanFilter.cs" />
     <Compile Include="Filters\IIsNotNullFilter.cs" />
     <Compile Include="Filters\IsNotNullFilter.cs" />
     <Compile Include="Filters\IsNullFilter.cs" />
