--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -53,11 +53,14 @@
   <ItemGroup>
     <Compile Include="Models\Personn.cs" />
     <Compile Include="Models\PersonnExplicit.cs" />
+    <Compile Include="DeleteUnitTest.cs" />
     <Compile Include="SelectUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlCommandBuilderUnitTest.cs" />
+    <Compile Include="SqlDeleteCommandBuilderUnitTest.cs" />
+    <Compile Include="SqlSelectCommandBuilderUnitTest.cs" />
     <Compile Include="TableUnitTest.cs" />
     <Compile Include="RowUnitTest.cs" />
+    <Compile Include="DatabaseUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -73,9 +76,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="UnitTestDatabase.mdf">
+    <None Include="UnitTestDatabase.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="UnitTestDatabase_log.ldf">
+      <DependentUpon>UnitTestDatabase.mdf</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
