--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -73,10 +73,14 @@
     <Compile Include="Filters\IIsEqualToFilter.cs" />
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\ISetter.cs" />
+    <Compile Include="Queries\Setter.cs" />
+    <Compile Include="Queries\Update.cs" />
     <Compile Include="Queries\IFilterableQuery.cs" />
     <Compile Include="Queries\IOrderableQuery.cs" />
     <Compile Include="Queries\IQuery.cs" />
     <Compile Include="Queries\IDelete.cs" />
+    <Compile Include="Queries\IUpdate.cs" />
     <Compile Include="Queries\ISelect.cs" />
     <Compile Include="Queries\Delete.cs" />
     <Compile Include="Queries\Select.cs" />
