--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -51,11 +51,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UpdateUnitTest.cs" />
     <Compile Include="Models\Personn.cs" />
     <Compile Include="Models\PersonnExplicit.cs" />
     <Compile Include="DeleteUnitTest.cs" />
     <Compile Include="SelectUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlUpdateCommandBuilderUnitTest.cs" />
     <Compile Include="SqlDeleteCommandBuilderUnitTest.cs" />
     <Compile Include="SqlSelectCommandBuilderUnitTest.cs" />
     <Compile Include="TableUnitTest.cs" />
