--- a/NetORMLib.Sql/NetORMLib.Sql.csproj
+++ b/NetORMLib.Sql/NetORMLib.Sql.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SqlCommandBuilder.cs" />
+    <Compile Include="CommandBuilders\SqlCommandBuilder.cs" />
+    <Compile Include="Databases\SqlLocalDatabaseCreator.cs" />
+    <Compile Include="Databases\SqlDatabaseCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -49,5 +51,6 @@
       <Name>NetORMLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
