--- a/NetORMLib.VersionControl/NetORMLib.VersionControl.csproj
+++ b/NetORMLib.VersionControl/NetORMLib.VersionControl.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UpgradeLog.cs" />
     <Compile Include="VersionControl.cs" />
     <Compile Include="IVersionControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
