--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Columns\IColumn.cs" />
     <Compile Include="CommandBuilders\CommandBuilder.cs" />
     <Compile Include="CommandBuilders\ICommandBuilder.cs" />
+    <Compile Include="ConnectionFactories\IConnectionFactory.cs" />
     <Compile Include="Databases\Database.cs" />
     <Compile Include="Databases\DatabaseCreator.cs" />
     <Compile Include="Databases\IDatabase.cs" />
