--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -77,6 +77,8 @@
     <Compile Include="Filters\IFilter.cs" />
     <Compile Include="ORMException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\CreateRelation.cs" />
+    <Compile Include="Queries\ICreateRelation.cs" />
     <Compile Include="Queries\ICreateTable.cs" />
     <Compile Include="Queries\ISetter.cs" />
     <Compile Include="Queries\CreateTable.cs" />
