--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -63,6 +63,7 @@
     <Compile Include="SqlCreateTableCommandBuilderUnitTest.cs" />
     <Compile Include="SqlInsertCommandBuilderUnitTest.cs" />
     <Compile Include="SqlLocalConnectionFactoryUnitTest.cs" />
+    <Compile Include="SqlSelectIdentityCommandBuilderUnitTest.cs" />
     <Compile Include="UpdateUnitTest.cs" />
     <Compile Include="Models\Personn.cs" />
     <Compile Include="Models\PersonnExplicit.cs" />
