Refactoring column and db type definition

--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbTypeUnitTest.cs" />
     <Compile Include="ColumnUnitTest.cs" />
     <Compile Include="CreateColumnUnitTest.cs" />
     <Compile Include="CreateRelationUnitTest.cs" />
