--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\TableAttribute.cs" />
+    <Compile Include="Columns\BaseColumn.cs" />
+    <Compile Include="Columns\NullableColumn.cs" />
     <Compile Include="Columns\Column.cs" />
     <Compile Include="Columns\IColumn.cs" />
     <Compile Include="CommandBuilders\CommandBuilder.cs" />
@@ -53,6 +55,10 @@
     <Compile Include="Databases\DatabaseCreator.cs" />
     <Compile Include="Databases\IDatabase.cs" />
     <Compile Include="Databases\IDatabaseCreator.cs" />
+    <Compile Include="DbTypes\DbDate.cs" />
+    <Compile Include="DbTypes\DbType.cs" />
+    <Compile Include="DbTypes\DbInt.cs" />
+    <Compile Include="DbTypes\IDbType.cs" />
     <Compile Include="Filters\OrFilter.cs" />
     <Compile Include="Filters\BooleanFilter.cs" />
     <Compile Include="Filters\AndFilter.cs" />
@@ -78,7 +84,6 @@
     <Compile Include="Filters\IIsGreaterThanFilter.cs" />
     <Compile Include="Filters\IIsEqualToFilter.cs" />
     <Compile Include="Filters\IFilter.cs" />
-    <Compile Include="NullableAttribute.cs" />
     <Compile Include="ORMException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\CreateColumn.cs" />
@@ -104,6 +109,7 @@
     <Compile Include="Queries\Delete.cs" />
     <Compile Include="Queries\Select.cs" />
     <Compile Include="Table.cs" />
+    <Compile Include="DbTypes\DbString.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
