--- a/NetORMLibVSExtension/NetORMLibVSExtension.csproj
+++ b/NetORMLibVSExtension/NetORMLibVSExtension.csproj
@@ -17,11 +17,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectTypeGuids>{82b43b9b-a64c-4715-b499-d71e9ca2bd60};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{FB2345FD-D537-4530-A26B-941B7C50C7B2}</ProjectGuid>
+    <ProjectGuid>{37734F0E-2F5D-400B-A87F-0F4215133CFE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VSExtension</RootNamespace>
-    <AssemblyName>VSExtension</AssemblyName>
+    <RootNamespace>NetORMLibVSExtension</RootNamespace>
+    <AssemblyName>NetORMLibVSExtension</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <GeneratePkgDefFile>true</GeneratePkgDefFile>
     <IncludeAssemblyInVSIXContainer>true</IncludeAssemblyInVSIXContainer>
@@ -51,8 +51,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BuildClassesCommand.cs" />
-    <Compile Include="BuildClassesCommandPackage.cs" />
+    <Compile Include="CreateORMFilesCommand.cs" />
+    <Compile Include="CreateDatabaseFileCommand.cs" />
+    <Compile Include="NetORMLibCommandPackage.cs" />
+    <Compile Include="Models\Change.cs" />
+    <Compile Include="Models\CreateTable.cs" />
+    <Compile Include="Models\Database.cs" />
+    <Compile Include="Models\Revision.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
@@ -64,10 +69,20 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.SDK" Version="15.9.3" ExcludeAssets="runtime" />
-    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.0.298" />
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="16.0.1230" />
   </ItemGroup>
   <ItemGroup>
-    <VSCTCompile Include="BuildClassesCommandPackage.vsct">
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Serialization" />
+  </ItemGroup>
+  <ItemGroup>
+    <VSCTCompile Include="NetORMLibCommandPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
   </ItemGroup>
@@ -78,17 +93,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\BuildClassesCommand.png" />
-    <Content Include="Resources\BuildClassesCommandPackage.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Content Include="Resources\CreateDatabaseFileCommand.png" />
+    <Content Include="Resources\CreateDatabaseFileCommandPackage.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
