--- a/NetORMLibVSExtension/NetORMLibVSExtension.csproj
+++ b/NetORMLibVSExtension/NetORMLibVSExtension.csproj
@@ -53,6 +53,11 @@
   <ItemGroup>
     <Compile Include="CreateORMFilesCommand.cs" />
     <Compile Include="CreateDatabaseFileCommand.cs" />
+    <Compile Include="EditorControl.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="EditorFactory.cs" />
+    <Compile Include="EditorPane.cs" />
     <Compile Include="Models\Column.cs" />
     <Compile Include="NetORMLibCommandPackage.cs" />
     <Compile Include="Models\Change.cs" />
