--- a/NetORMLibVSExtension/NetORMLibVSExtension.csproj
+++ b/NetORMLibVSExtension/NetORMLibVSExtension.csproj
@@ -53,9 +53,10 @@
   <ItemGroup>
     <Compile Include="CreateORMFilesCommand.cs" />
     <Compile Include="CreateDatabaseFileCommand.cs" />
-    <Compile Include="EditorControl.cs">
-      <SubType>Component</SubType>
+    <Compile Include="DatabaseView.xaml.cs">
+      <DependentUpon>DatabaseView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DatabaseViewHost.cs" />
     <Compile Include="EditorFactory.cs" />
     <Compile Include="EditorPane.cs" />
     <Compile Include="Models\Column.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="Models\Revision.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils.cs" />
+    <Compile Include="WPFControlWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Key.snk" />
@@ -79,13 +81,18 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Serialization" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <VSCTCompile Include="NetORMLibCommandPackage.vsct">
@@ -101,6 +108,12 @@
   <ItemGroup>
     <Content Include="Resources\CreateDatabaseFileCommand.png" />
     <Content Include="Resources\CreateDatabaseFileCommandPackage.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="DatabaseView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
