--- a/NetORMLibUnitTest/NetORMLibUnitTest.csproj
+++ b/NetORMLibUnitTest/NetORMLibUnitTest.csproj
@@ -58,8 +58,10 @@
     <Compile Include="Queries\CreateColumnUnitTest.cs" />
     <Compile Include="Queries\CreateRelationUnitTest.cs" />
     <Compile Include="Queries\CreateTableUnitTest.cs" />
-    <Compile Include="Tables\JobTable.cs" />
-    <Compile Include="Tables\JobTypeTable.cs" />
+    <Compile Include="Tables\JoinedTablesUnitTest.cs" />
+    <Compile Include="Tables\TableUnitTest.cs" />
+    <Compile Include="TestTables\JobTable.cs" />
+    <Compile Include="TestTables\JobTypeTable.cs" />
     <Compile Include="Queries\InsertUnitTest.cs" />
     <Compile Include="CommandBuilders\SqlCreateColumnCommandBuilderUnitTest.cs" />
     <Compile Include="CommandBuilders\SqlCreateRelationCommandBuilderUnitTest.cs" />
@@ -68,9 +70,9 @@
     <Compile Include="CommandBuilders\SqlLocalConnectionFactoryUnitTest.cs" />
     <Compile Include="CommandBuilders\SqlSelectIdentityCommandBuilderUnitTest.cs" />
     <Compile Include="Queries\UpdateUnitTest.cs" />
-    <Compile Include="Tables\PersonnTestName.cs" />
-    <Compile Include="Tables\PersonnTable.cs" />
-    <Compile Include="Tables\PersonnExplicitName.cs" />
+    <Compile Include="TestTables\PersonnTestName.cs" />
+    <Compile Include="TestTables\PersonnTable.cs" />
+    <Compile Include="TestTables\PersonnExplicitName.cs" />
     <Compile Include="Queries\DeleteUnitTest.cs" />
     <Compile Include="Queries\SelectUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,7 +80,7 @@
     <Compile Include="CommandBuilders\SqlDeleteCommandBuilderUnitTest.cs" />
     <Compile Include="CommandBuilders\SqlSelectCommandBuilderUnitTest.cs" />
     <Compile Include="TableDefinitionUnitTest.cs" />
-    <Compile Include="Tables\TestDB.cs" />
+    <Compile Include="TestTables\TestDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -93,6 +95,7 @@
       <Name>NetORMLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
