--- a/NetORMLib/NetORMLib.csproj
+++ b/NetORMLib/NetORMLib.csproj
@@ -84,9 +84,11 @@
     <Compile Include="ORMException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\CreateColumn.cs" />
+    <Compile Include="Queries\CreateConstraint.cs" />
     <Compile Include="Queries\CreateRelation.cs" />
     <Compile Include="Queries\ICallBackQuery.cs" />
     <Compile Include="Queries\ICreateColumn.cs" />
+    <Compile Include="Queries\ICreateConstraint.cs" />
     <Compile Include="Queries\ICreateRelation.cs" />
     <Compile Include="Queries\ICreateTable.cs" />
     <Compile Include="Queries\ISelectIdentity.cs" />
